feat: add create, update and delete methods
