# app/Http/Requests/Tasks/CreateTaskRequest.php
@@ -1,0 +1,40 @@
+<?php
+
+namespace App\Http\Requests\Tasks;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+/**
+ * @OA\Schema(
+ *     schema="CreateTaskRequest",
+ *     description="Task object that needs to be added",
+ *     required={"title", "description", "status"},
+ *     @OA\Property(property="title", type="string", example="Task Title"),
+ *     @OA\Property(property="description", type="string", example="Task Description"),
+ *     @OA\Property(property="status", type="boolean", example=true),
+ * )
+ */
+class CreateTaskRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return false;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'title' => ['required', 'string', 'max:255'],
+            'description' => ['nullable', 'string'],
+            'status' => ['nullable', 'boolean'],
+        ];
+    }
+}
