# routes/api.php
@@ -1,8 +1,11 @@
 <?php
 
 use App\Http\Controllers\API\TaskController;
+use App\Http\Controllers\Auth\LoginController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use Laravel\Fortify\Http\Controllers\PasswordResetLinkController;
+use Laravel\Fortify\Http\Controllers\RegisteredUserController;
 
 /*
 |--------------------------------------------------------------------------
@@ -19,7 +22,12 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::apiResource(
-    'tasks',
-    TaskController::class
-);
+Route::post('login', [LoginController::class, 'login']);;
+Route::post('register', [RegisteredUserController::class, 'store']);;
+
+
+Route::middleware('auth:sanctum')->group(function () {
+    // Route::post('forgot-password', [PasswordResetLinkController::class, 'store']);;
+
+    Route::apiResource('tasks', TaskController::class);
+});
